--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,8 @@ tokio-stream = { version = "0.1.1", features = ["net"] }
 [[example]]
 name = "html-designer"
 path = "tools/html-designer.rs"
+
+[workspace]
+members = [
+    "mg"
+]
